Add mongodb c# driver adn create UnitOfWork

--- a/Src/Howframework.Web/Howframework.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Howframework.Web/Howframework.Web/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
 					<div id="content" class="span8">
 						<ul class="posts">
 							<li class="post">
-								<h2>Howframework was proposed by Mior</h2>
+								<h2>Howframework</h2>
 								<div class="meta">April 19, 2012 12:00 am</div>
 								<div class="entry">
                                      @RenderBody()
@@ -78,7 +78,17 @@
 					</div>
 					<div id="sidebar" class="span4">
 						<div class="widget">
-							Praesent laoreet elit vel augue porttitor eu adipiscing risus egestas. Donec luctus ligula nec tortor porta ut sodales neque ultrices. Sed rhoncus metus non est ullamcorper aliquet. Morbi eu blandit nibh. Donec dictum iaculis diam nec pulvinar. Morbi auctor hendrerit aliquam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+							<div>
+                                    <form class="well form-inline">
+                                    <input type="text" class="input-small" placeholder="Email">
+                                    <input type="password" class="input-small" placeholder="Password">
+                                    <label class="checkbox">
+                                    <input type="checkbox"> Remember me
+                                    </label>
+                                    <button type="submit" class="btn">Sign in</button>
+                                    </form>
+                                    <a href="/UserRegistration/Register">Register Here</a>
+                            </div>
 						</div>
 					</div>
 				</div>
