--- a/Src/Howframework.Web/Howframework.Web/Views/Shared/_AuthLayout.cshtml
+++ b/Src/Howframework.Web/Howframework.Web/Views/Shared/_AuthLayout.cshtml
@@ -1,15 +1,139 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
-</head>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>HowFrameWork</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+    	<meta name="author" content="">
 
-<body>
-    @RenderBody()
-</body>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+    
+        <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
+        @*<link href="@Url.Content("~/Content/style.css")" rel="stylesheet" type="text/css" />*@
+        <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
+
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+
+        @*<script type="text/javascript">
+            $(document).ready(function () {
+
+                $('#loginForm').submit(function () {
+
+                    var form = $(this);
+                    $.ajax({
+                        url: form.attr('action'),
+                        type: "POST",
+                        data: form.serialize(),
+                        success: function (data) {
+
+                        },
+                        error: function (jqXhr, textStatus, errorThrown) {
+                            alert("Error '" + jqXhr.status + "' (textStatus: '" + textStatus + "', errorThrown: '" + errorThrown + "')");
+                        },
+                        complete: function () {
+
+                        }
+
+                    });
+                    return false;
+                });
+
+            });
+        </script>*@
+	</head>
+
+	<body>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<div class="nav-collapse">
+						<ul class="nav">
+							<li class="active"><a href="/Home/Index">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+					</div><!--/.nav-collapse -->
+                    <div class="btn-group pull-right">
+                        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                          <i class="icon-user"></i> Username
+                          <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Profile</a></li>
+                          <li class="divider"></li>
+                          <li><a href="/Authentication/SignOut">Sign Out</a></li>
+                        </ul>
+                      </div>
+				</div>
+			</div>
+		</div>
+
+        
+
+		@*<header>
+			<div class="container">
+				<div class="row">
+					<div class="span6">
+						<h1>This is my header</h1>
+						<p>This is my site slogan</p>
+					</div>
+					<div class="span6">
+						<p>Proin id libero molestie ante faucibus tincidunt sit amet ac nisi. Mauris feugiat ultricies magna eu laoreet. Nunc tincidunt tempus leo vitae gravida.
+						</p>
+				</div>
+			</div>
+		</header>*@
+
+		<div id="body" style="margin-top:50px">
+			<div class="container">
+				<div class="row">
+					<div id="content" class="span8">
+						
+								<h2>Howframework</h2>
+
+								<div class="entry">
+                                     @RenderBody()
+									
+								</div>
+								
+							
+					</div>
+					<div id="sidebar" class="span4">
+						<div class="widget">
+							<div>
+                            
+                                    
+                            </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="span6">&copy; Copyright 2012</div>
+					<div class="span6"></div>
+				</div>
+			</div>
+		</footer>
+		<!-- JS -->
+		@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>*@
+        <script src="../../Scripts/bootstrap.js" type="text/javascript"></script>
+
+	</body>
 </html>
+
+
+
