remove mongodb key from config

--- a/Src/Howframework.Web/Howframework.Web/Views/Shared/_Layout.cshtml
+++ b/Src/Howframework.Web/Howframework.Web/Views/Shared/_Layout.cshtml
@@ -131,6 +131,7 @@
 		</footer>
 		<!-- JS -->
 		@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>*@
+        <script src="../../Scripts/bootstrap.js" type="text/javascript"></script>
 
 	</body>
 </html>
