--- a/Src/Howframework.Web/Howframework.Web/Views/Shared/_RegistrationLayout.cshtml
+++ b/Src/Howframework.Web/Howframework.Web/Views/Shared/_RegistrationLayout.cshtml
@@ -77,8 +77,8 @@
 			</div>
 		</footer>
 		<!-- JS -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>*@
+        <script src="../../Scripts/bootstrap.js" type="text/javascript"></script>
 	</body>
 </html>
 
