change registration redirect page

--- a/Src/Howframework.Web/Howframework.Web/Views/UserRegistration/Register.cshtml
+++ b/Src/Howframework.Web/Howframework.Web/Views/UserRegistration/Register.cshtml
@@ -33,7 +33,7 @@
 
 <div>
 <h2>Registration</h2>
-      <form class="form-horizontal" id="newRegisterUserForm" action="/UserRegistration/Register" >
+      <form class="form-horizontal" id="newRegisterUserForm" action="/UserRegistration/Register" method="post" >
         <fieldset>
           <div class="control-group">
             <label for="input01" class="control-label">Full Name</label>
