--- a/Src/Howframework.Web/Howframework.Web/Views/Shared/Error.cshtml
+++ b/Src/Howframework.Web/Howframework.Web/Views/Shared/Error.cshtml
@@ -1,16 +1,85 @@
-﻿@{
-    Layout = null;
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>HowFrameWork</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+    	<meta name="author" content="">
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
-</head>
-<body>
-    <h2>
-        Sorry, an error occurred while processing your request.
-    </h2>
-</body>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+    
+        <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
+        <link href="@Url.Content("~/Content/style.css")" rel="stylesheet" type="text/css" />
+        <script src="@Url.Content("~/Scripts/jquery-1.7.2.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
+
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+
+	</head>
+
+	<body>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<div class="nav-collapse">
+						<ul class="nav">
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+					</div><!--/.nav-collapse -->
+				</div>
+			</div>
+		</div>
+
+		<header>
+			<div class="container">
+				<div class="row">
+					<div class="span6">
+						&nbsp;
+					</div>
+					<div class="span6">
+						
+				    </div>
+			</div>
+		</header>
+
+		<div id="body" style="margin-top:50px">
+			<div class="container">
+				<div class="row">
+					<div id="content" class="span8">
+						        Sorry, an error occurred while processing your request.
+								@RenderBody()
+							
+					</div>
+					<div id="sidebar" class="span4">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="span6">&copy; Copyright 2012</div>
+					<div class="span6"></div>
+				</div>
+			</div>
+		</footer>
+		<!-- JS -->
+		@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>*@
+        <script src="../../Scripts/bootstrap.js" type="text/javascript"></script>
+	</body>
 </html>
+
+
